--- a/src/app/page/view-course/view-course.component.html
+++ b/src/app/page/view-course/view-course.component.html
@@ -1,25 +1,27 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="card">
-      <div class="card-header card-header-warning">
-        <div class="d-flex justify-content-between align-items-center">
-          <h4 *ngIf="check" class="card-title mb-0 ">All Courses</h4>
-          <h4 *ngIf="otherRole" class="card-title mb-0 ">Your Courses</h4>
-          <div>
-            <a *ngIf="checkData" mat-raised-button [routerLink]="'/page/course'">Add Course</a>
+    <div class="col-md-12 reused_table_header">
+      <div class="card">
+        <div class="card-header card-header-warning">
+          <div class="d-flex justify-content-between align-items-center">
+            <h4 *ngIf="check" class="card-title mb-0 ">All Courses</h4>
+            <h4 *ngIf="otherRole" class="card-title mb-0 ">Your Courses</h4>
+            <div>
+              <a *ngIf="checkData" mat-raised-button [routerLink]="'/page/course'">Add Course</a>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div *ngFor="let user_roles of userRoleList" [ngSwitch]="user_roles.roleName">
       
-      <div *ngSwitchCase="'ROLE_ADMIN'">
+    
+    <div class="" *ngFor="let user_roles of userRoleList" [ngSwitch]="user_roles.roleName">
+      
+      <div class="row mt-4" *ngSwitchCase="'ROLE_ADMIN'">
         <ng-container *ngFor="let course of courses | paginate:{
           itemsPerPage:tableSize,
           currentPage:page,
           totalItems:count
         }; let i = index">
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="col-sm-6 px-5">
           <mat-card class="card shadow p-3 mb-5 bg-white rounded">
             <mat-card-title>{{course.courseName.toUpperCase()}}</mat-card-title>
             <mat-card-content>{{course.courseDescription}}</mat-card-content>
@@ -41,13 +43,13 @@
         </div>
         </ng-container>
       </div>
-      <div *ngSwitchCase="'ROLE_AUTHOR'" class="col-sm-12">
+      <div *ngSwitchCase="'ROLE_AUTHOR'" class="row">
         <ng-container *ngFor="let course of courseByProfile | paginate:{
           itemsPerPage:tableSize,
           currentPage:page,
           totalItems:count
         }; let i = index">
-          <div class="col-sm-6 col-sm-offset-3">
+          <div class="col-sm-6">
             <mat-card class="card shadow p-3 mb-5 bg-white rounded">
               <mat-card-title>{{course.courseName.toUpperCase()}}</mat-card-title>
               <mat-card-content>{{course.courseDescription}}</mat-card-content>
@@ -70,13 +72,13 @@
         </ng-container>
       </div>
       <div *ngIf="checkUser">
-        <div *ngSwitchCase="'ROLE_MENTOR'" class="col-sm-12">
+        <div *ngSwitchCase="'ROLE_MENTOR'" class="row">
           <ng-container *ngFor="let course of courseByProfile | paginate:{
             itemsPerPage:tableSize,
             currentPage:page,
             totalItems:count
           }; let i = index">
-            <div class="col-sm-6 col-sm-offset-3">
+            <div class="col-sm-6">
               <mat-card class="card shadow p-3 mb-5 bg-white rounded">
                 <mat-card-title>{{course.courseName.toUpperCase()}}</mat-card-title>
                 <mat-card-content>{{course.courseDescription}}</mat-card-content>
@@ -90,13 +92,13 @@
           </ng-container>
         </div>
       </div>
-      <div *ngSwitchCase="'ROLE_TRAINEE'" class="col-sm-12">
+      <div *ngSwitchCase="'ROLE_TRAINEE'" class="row">
         <ng-container *ngFor="let course of courseByProfile | paginate:{
           itemsPerPage:tableSize,
           currentPage:page,
           totalItems:count
         }; let i = index">
-          <div class="col-sm-6 col-sm-offset-3">
+          <div class="col-sm-6">
             <mat-card class="card shadow p-3 mb-5 bg-white rounded">
               <mat-card-title>{{course.courseName.toUpperCase()}}</mat-card-title>
               <mat-card-content>{{course.courseDescription}}</mat-card-content>
@@ -219,5 +221,7 @@
         </div>
       </div>
     </div>  -->
+  </div>
+</div>
   </div>
 </div>
