--- a/src/app/page/sub-topic-view/sub-topic-view.component.html
+++ b/src/app/page/sub-topic-view/sub-topic-view.component.html
@@ -1,15 +1,7 @@
 <div class="container-fluid">
       <div class="row">
-            <div class="col-md-8 card shadow bg-white rounded border border-secondary" style=" border-right: 1px solid #c9c9c9;">
-                  <h2><b>{{topicName}}</b></h2>
-            </div>
-            <div class="col-md-4 card shadow bg-white rounded border border-secondary">
-                  <h3>Estimated Time : {{esimatedTime}}</h3>
-            </div>
-            <div class="card bg-white rounded">
-                  <p>{{topicDescription}}</p>
-            </div>
-            <div class="col-md-12 reused_table_header">
+
+            <div class="col-md-7 reused_table_header">
                   <div class="card">
                         <div class="card-header card-header-warning">
                               <div class="d-flex justify-content-between align-items-center">
@@ -78,5 +70,16 @@
 
                   </div>
             </div>
+            <div class="col-md-5">
+                  <div class="card p-5">
+                        <h2><b>{{topicName}}</b></h2>
+                        <h3>Estimated Time : {{esimatedTime}}</h3>
+                        <div class="">
+                              <p>{{topicDescription}}</p>
+                        </div>
+                  </div>
+            </div>
+
+
       </div>
 </div>
