--- a/src/app/page/topic-view/topic-view.component.html
+++ b/src/app/page/topic-view/topic-view.component.html
@@ -1,45 +1,55 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="card"> 
-      <div class="card-header card-header-warning">
-        <div class="d-flex justify-content-between align-items-center">
-          <h2 class="card-title mb-0">Topic List</h2>
-          <div>
-            <a *ngIf="check" class="mr-1" mat-raised-button [routerLink]="'/page/topic'">Add Topic</a>
-            <a  mat-raised-button [routerLink]="'/page/viewCourse'">Back to Course</a>
+    <div class="col-md-12 reused_table_header">
+      <div class="card">
+        <div class="card-header card-header-warning">
+          <div class="d-flex justify-content-between align-items-center">
+            <h2 class="card-title mb-0">Topic List</h2>
+            <div>
+              <a *ngIf="check" class="mr-1" mat-raised-button [routerLink]="'/page/topic'">Add Topic</a>
+              <a mat-raised-button [routerLink]="'/page/viewCourse'">Back to Course</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-5">
+          <ng-container *ngFor="let topic of topics |  paginate:{
+            itemsPerPage:tableSize,
+            currentPage:page,
+            totalItems:count
+          }; let i = index">
+            <div class="col-sm-6 col-sm-offset-3">
+              <mat-card class="card shadow p-3 mb-5 bg-white rounded">
+                <mat-card-title>{{topic.topicName.toUpperCase()}}</mat-card-title>
+                <mat-card-content>{{topic.topicDescription}}</mat-card-content>
+                <mat-card-actions align="start">
+                  <a class="navLink mr-1" [routerLink]="['/page/subTopicView/'+topic.id]">
+                    <span class="p-2 pl-0 text-center badge badge-info">
+                      Start Learn {{topic.topicName}}
+                    </span>
+                  </a>
+                </mat-card-actions>
+                <mat-card-actions align="end" *ngIf="check">
+                  <a class="text-white" mat-mini-fab color="accent" [routerLink]="'/page/updateTopic/'+topic.id">
+                    <mat-icon class="mat-18">system_update</mat-icon>
+                  </a>
+                  <a class="ml-3 text-white" mat-mini-fab color="primary">
+                    <mat-icon (click)="deleteTopic(topic.id)" class="mat-18">delete</mat-icon>
+                  </a>
+                </mat-card-actions>
+              </mat-card>
+            </div>
+          </ng-container>
+
+          <div class="pb-4 d-flex justify-content-end pr-3">
+            <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDataChange($event)">
+            </pagination-controls>
           </div>
         </div>
       </div>
-      </div>
-    <div>
-      <ng-container *ngFor="let topic of topics |  paginate:{
-              itemsPerPage:tableSize,
-              currentPage:page,
-              totalItems:count
-            }; let i = index">
-      <div class="col-sm-6 col-sm-offset-3">
-        <mat-card class="card shadow p-3 mb-5 bg-white rounded">
-          <mat-card-title>{{topic.topicName.toUpperCase()}}</mat-card-title>
-          <mat-card-content>{{topic.topicDescription}}</mat-card-content>
-          <mat-card-actions align="start">
-            <a class="navLink mr-1" [routerLink]="['/page/subTopicView/'+topic.id]">
-              <span class="p-2 pl-0 text-center badge badge-info">
-                Start Learn {{topic.topicName}}
-              </span>
-            </a>
-          </mat-card-actions>
-          <mat-card-actions align="end" *ngIf="check">
-            <a class="text-white" mat-mini-fab color="accent" [routerLink]="'/page/updateTopic/'+topic.id">
-              <mat-icon class="mat-18">system_update</mat-icon>
-            </a>
-            <a class="ml-3 text-white" mat-mini-fab color="primary">
-              <mat-icon (click)="deleteTopic(topic.id)" class="mat-18">delete</mat-icon>
-            </a>
-          </mat-card-actions>
-        </mat-card>
-      </div>
-      </ng-container>
     </div>
+
+    
     <!-- <div class="col-md-12 reused_table_header">
       <div class="card">
         
@@ -101,9 +111,6 @@
 
     </div>
     </div> -->
-    <div class="pb-4 d-flex justify-content-end pr-3">
-      <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDataChange($event)">
-      </pagination-controls>
-    </div>
+    
   </div>
 </div>
